package Desarrollo.CartasDesarrollo;

import Catan.Turno;
import Jugador.Jugador;
import Tablero.Tablero;

import java.util.ArrayList;
import java.util.List;

public class Caballero extends CartaDesarrollo{

    //Debera tener acceso al Gestor de Ladron.

    @Override
    public void activar(Jugador jugador) {
        //tablero.moverLadron(10, jugador);
    }

}
