@startuml
title java.Catan - Diagrama de Clases Mejorado (Sintaxis Correcta)

' ===== ENUMS =====
enum TerrenoTipo {
    BOSQUE
    PRADERA
    CAMPO
    MONTAÑA
    COLINA
    DESIERTO
}
enum java.Recurso {
    MADERA
    LANA
    TRIGO
    MINERAL
    BARRO
}

enum CartaDesarrolloTipo {
    CABALLERO
    PROGRESO
    PUNTOS_VICTORIA
}

' ===== INTERFACES =====
interface Construible {
    +esConstruible(): bool
}

interface Jugable {
    +jugar(jugador: java.Jugador)
}

' ===== CLASES PRINCIPALES =====
class java.Catan {
    -tablero: java.Tablero
    -jugadores: List<java.Jugador>
    -banco: Banco
    -dados: java.Dados
    -jugadorActual: int
    +ejecutarTurno()
    +pasarAlSiguienteJugador()
}

class java.Tablero {
    -hexagonos: List<Hexagono>
    -vertices: List<Vertice>
    -aristas: List<Arista>
    -ladron: Hexagono
    +inicializar()
    +obtenerHexagonosConNumero(numero: int): List<Hexagono>
    +moverLadron(hex: Hexagono)
}

class java.Dados {
    +lanzar(): int
}

class Banco {
    -recursos: Map<java.Recurso,Integer>
    -cartasDesarrollo: List<CartaDesarrollo>
    +entregarRecurso(j: java.Jugador, r: java.Recurso, c: int)
    +entregarCartaDesarrollo(): CartaDesarrollo
}

class java.Jugador {
    -nombre: String
    -puntos: int
    -servicioConstruccion: ServicioConstruccion
    -servicioComercio: ServicioComercio
    -servicioCartas: ServicioCartas
}

class ServicioConstruccion {
    +construirPoblado(j: java.Jugador, v: Vertice)
    +construirCiudad(j: java.Jugador, v: Vertice)
    +construirCamino(j: java.Jugador, a: Arista)
}

class ServicioComercio {
    +comerciar(j1: java.Jugador, j2: java.Jugador/Banco, ofrecer: Map<java.Recurso,Integer>, pedir: Map<java.Recurso,Integer>)
}

class ServicioCartas {
    +comprarCarta(j: java.Jugador)
    +jugarCarta(c: CartaDesarrollo, j: java.Jugador)
}

' ===== TABLERO =====
class Hexagono {
    -terreno: java.Terreno
    -fichaNumero: FichaNumero
    -vertices: Vertice[6]
    -aristas: Arista[6]
    +getVertices(): List<Vertice>
}

class java.Terreno {
    -tipo: TerrenoTipo
    +getRecurso(): java.Recurso
}

class FichaNumero {
    -valor: int
}

class Vertice implements Construible {
    -estructura: Estructura
    -coordenada: int
    -aristas: List<Arista>
    +esConstruible(): bool
}

class Arista {
    -camino: Camino
    -v1: Vertice
    -v2: Vertice
}

' ===== ESTRUCTURAS Y CAMINOS =====
abstract class Estructura {
    -jugador: java.Jugador
    +getJugador(): java.Jugador
}

class Poblado extends Estructura
class Ciudad extends Estructura

class Camino {
    -jugador: java.Jugador
}

' ===== CARTAS =====
abstract class CartaDesarrollo implements Jugable {
    -jugador: java.Jugador
}

class Caballero extends CartaDesarrollo
class Progreso extends CartaDesarrollo
class PuntosVictoria extends CartaDesarrollo

' ===== ASOCIACIONES =====
java.Catan --> java.Tablero
java.Catan --> Banco
java.Catan --> java.Dados
java.Catan --> java.Jugador : 1..4

java.Tablero --> Hexagono : 19
java.Tablero --> Hexagono : ladron

Hexagono --> FichaNumero
Hexagono --> Vertice : 6

FichaNumero --> java.Terreno

Vertice --> Estructura : 0..1
Vertice --> Arista : 2..3

Arista --> Camino : 0..1
Arista --> Vertice : 2

Estructura --> java.Jugador
Camino --> java.Jugador
CartaDesarrollo --> java.Jugador

' ===== DEPENDENCIAS =====
java.Jugador ..> java.Tablero : usa
java.Jugador ..> Banco : recibe recursos
java.Jugador ..> java.Dados : lanza
Hexagono ..> java.Terreno : consulta recurso
Vertice ..> Estructura : consulta
Arista ..> Camino : consulta
Banco ..> java.Recurso : entrega
Banco ..> CartaDesarrollo : entrega

@enduml
